--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "~13.2.0",
     "@angular/cdk": "^13.2.5",
     "@angular/common": "~13.2.0",
@@ -23,6 +24,7 @@
     "angularx-social-login": "^4.0.1",
     "bulma": "^0.9.3",
     "bulma-responsive-tables": "^1.2.3",
+    "hamburgers": "^1.2.1",
     "ngx-spinner": "^13.1.1",
     "particlesjs": "^2.2.3",
     "prettier": "^2.5.1",
