--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              "src/assets/images/"
-            ],
+            "assets": ["src/favicon.ico", "src/assets", "src/assets/images/"],
             "styles": [
               "node_modules/bulma/css/bulma.min.css",
               "node_modules/bulma-responsive-tables/css/main.min.css",
@@ -97,13 +93,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
