--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "angularx-social-login": "^4.0.1",
     "bulma": "^0.9.3",
     "bulma-responsive-tables": "^1.2.3",
