feat: 🎸 add a map that show where clicks come from
add a map from map-box showing where clicks come from, total clicks
number and a legend

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/assets/images/"],
             "styles": [
+              "node_modules/mapbox-gl/dist/mapbox-gl.css",
               "node_modules/bulma/css/bulma.min.css",
               "node_modules/bulma-responsive-tables/css/main.min.css",
               "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
@@ -40,7 +41,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
