--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json ",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "scully": "npx scully --",
+    "scully:serve": "npx scully serve --"
   },
   "private": true,
   "dependencies": {
@@ -20,13 +22,22 @@
     "@angular/material": "^13.2.5",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/platform-server": "^12",
     "@angular/router": "~13.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@scullyio/init": "^2.1.29",
+    "@scullyio/ng-lib": "^2.1.0",
+    "@scullyio/platform-server": "^2.1.0",
+    "@scullyio/scully": "^2.1.0",
+    "@scullyio/scully-plugin-puppeteer": "^2.1.29",
+    "@types/mapbox-gl": "^2.6.3",
     "angularx-social-login": "^4.0.1",
     "bulma": "^0.9.3",
     "bulma-responsive-tables": "^1.2.3",
     "charts.css": "^0.9.0",
     "hamburgers": "^1.2.1",
+    "mapbox-gl": "^2.7.1",
+    "mapbox.js": "^3.3.1",
     "ngx-spinner": "^13.1.1",
     "particlesjs": "^2.2.3",
     "prettier": "^2.5.1",
