--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets", "src/assets/images/", ".htaccess"],
+            "assets": ["src/favicon.ico", "src/assets", "src/assets/images/", "src/.htaccess"],
             "styles": [
               "node_modules/mapbox-gl/dist/mapbox-gl.css",
               "node_modules/bulma/css/bulma.min.css",
