--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,19 +1,8 @@
-# Generated with ngx-htaccess-generator v1.2.0
-# Check for updates: https://julianpoemp.github.io/ngx-htaccess-generator/
-#
-# Transparency notice: Some parts were extracted from
-# Apache Server Configs v5.0.0 | MIT License
-# https://github.com/h5bp/server-configs-apache
-# Extracted parts are wrapped by "START Extract from ASC"
 
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  
-  # Redirection of requests to index.html
-  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
-  RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
-  RewriteRule ^.*$ - [NC,L]
-  # Redirect all non-file routes to index.html
-  RewriteRule ^(?!.*\.).*$ index.html [NC,L]
-</IfModule>
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} -s [OR]
+RewriteCond %{REQUEST_FILENAME} -l [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^.*$ - [NC,L]
 
+RewriteRule ^(.*) /index.html [NC,L]
