--- a/package.json
+++ b/package.json
@@ -1,62 +1,72 @@
 {
-  "name": "short",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "scully": "npx scully --",
-    "scully:serve": "npx scully serve --"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animation": "^4.0.0-beta.8",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "^13.2.5",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/material": "^13.2.5",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/platform-server": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@auth0/angular-jwt": "^5.0.2",
-    "@scullyio/init": "^2.1.29",
-    "@scullyio/ng-lib": "^2.1.0",
-    "@scullyio/platform-server": "^2.1.0",
-    "@scullyio/scully": "^2.1.0",
-    "@scullyio/scully-plugin-puppeteer": "^2.1.29",
-    "@types/mapbox-gl": "^2.6.3",
-    "angularx-social-login": "^4.0.1",
-    "bulma": "^0.9.3",
-    "bulma-responsive-tables": "^1.2.3",
-    "charts.css": "^0.9.0",
-    "hamburgers": "^1.2.1",
-    "mapbox-gl": "^2.7.1",
-    "mapbox.js": "^3.3.1",
-    "ngx-spinner": "^13.1.1",
-    "particlesjs": "^2.2.3",
-    "prettier": "^2.5.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.8.4"
-  }
+    "name": "short",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "scully": "npx scully --",
+        "scully:serve": "npx scully serve --",
+        "lint": "ng lint"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animation": "^4.0.0-beta.8",
+        "@angular/animations": "^14.2.12",
+        "@angular/cdk": "^13.2.5",
+        "@angular/common": "^14.2.12",
+        "@angular/compiler": "^14.2.12",
+        "@angular/core": "^14.2.12",
+        "@angular/forms": "^14.2.12",
+        "@angular/material": "^13.2.5",
+        "@angular/platform-browser": "^14.2.12",
+        "@angular/platform-browser-dynamic": "^14.2.12",
+        "@angular/platform-server": "^14.2.12",
+        "@angular/router": "^14.2.12",
+        "@auth0/angular-jwt": "^5.0.2",
+        "@nguniversal/express-engine": "^7.0.1",
+        "@scullyio/init": "^2.1.29",
+        "@scullyio/ng-lib": "^2.1.0",
+        "@scullyio/platform-server": "^2.1.0",
+        "@scullyio/scully": "^2.1.0",
+        "@scullyio/scully-plugin-puppeteer": "^2.1.29",
+        "@types/mapbox-gl": "^2.6.3",
+        "angularx-social-login": "^4.0.1",
+        "bulma": "^0.9.3",
+        "bulma-responsive-tables": "^1.2.3",
+        "charts.css": "^0.9.0",
+        "hamburgers": "^1.2.1",
+        "mapbox-gl": "^2.7.1",
+        "mapbox.js": "^3.3.1",
+        "ngx-spinner": "^13.1.1",
+        "particlesjs": "^2.2.3",
+        "rxjs": "~7.5.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^14.2.10",
+        "@angular-eslint/builder": "14.4.0",
+        "@angular-eslint/eslint-plugin": "14.4.0",
+        "@angular-eslint/eslint-plugin-template": "14.4.0",
+        "@angular-eslint/schematics": "14.4.0",
+        "@angular-eslint/template-parser": "14.4.0",
+        "@angular/cli": "^14.2.10",
+        "@angular/compiler-cli": "^14.2.12",
+        "@types/jasmine": "~3.10.0",
+        "@types/node": "^12.11.1",
+        "@typescript-eslint/eslint-plugin": "5.43.0",
+        "@typescript-eslint/parser": "5.43.0",
+        "eslint": "^8.28.0",
+        "jasmine-core": "~4.0.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.1.0",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "prettier": "2.8.4",
+        "typescript": "~4.8.4"
+    }
 }
